docs: Fixed background issue (#2037)
Fixed missing background for body, which causes browser default to apply, resulting in unreadable content

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,4 +1,4 @@
-body {-webkit-text-size-adjust: 100%;}
+body {bakground:white;-webkit-text-size-adjust: 100%;}
 body,table,h5 {font:normal 16px 'Open Sans';}
 header,main {margin:auto;max-width:1000px;}
 header section {position:absolute;width:250px;}
